interprete2/target/generated-sources/antlr4/com/milenguaje/simple/interprete2/SimpleParser.java
// Generated from com\milenguaje\simple\interprete2\Simple.g4 by ANTLR 4.9.2
package com.milenguaje.simple.interprete2;

	import java.util.Map;
	import java.util.HashMap;
	import java.util.List;
	import java.util.ArrayList;
	import com.milenguaje.simple.interprete2.ast.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class SimpleParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		MAIN=1, PRINTLN=2, COM=3, DEF=4, PUT=5, ADDO=6, MULTO=7, DIVO=8, SUMO=9, 
		CUP=10, CDOWN=11, CRIGHT=12, CLEFT=13, POS=14, POSX=15, POSY=16, COLOR=17, 
		DOWN=18, UP=19, BEG=20, FOR=21, LOOP=22, END=23, TO=24, CASE=25, WHEN=26, 
		THEN=27, ELSE=28, REPEAT=29, UNTIL=30, WHILE=31, WHEND=32, EQUAL=33, AND=34, 
		OR=35, GREATER=36, SMALLER=37, SUBSTR=38, RANDOM=39, PLUS=40, MINUS=41, 
		MULT=42, DIV=43, GT=44, LT=45, GEQ=46, LEQ=47, EQ=48, NEQ=49, ASSIGN=50, 
		BRACKET_OPEN=51, BRACKET_CLOSE=52, PAR_OPEN=53, PAR_CLOSE=54, P_OPEN=55, 
		P_CLOSE=56, SEMICOLON=57, COLON=58, BOOLEAN=59, ID=60, NUMBER=61, WS=62;
	public static final int
		RULE_program = 0, RULE_sentence = 1, RULE_temporal = 2, RULE_operation = 3, 
		RULE_logical = 4, RULE_println = 5, RULE_define = 6, RULE_put = 7, RULE_add = 8, 
		RULE_continueup = 9, RULE_continuedown = 10, RULE_continueright = 11, 
		RULE_continueleft = 12, RULE_pos = 13, RULE_posx = 14, RULE_posy = 15, 
		RULE_color = 16, RULE_down = 17, RULE_up = 18, RULE_beggining = 19, RULE_fory = 20, 
		RULE_cases = 21, RULE_when = 22, RULE_elses = 23, RULE_repeat = 24, RULE_whiles = 25, 
		RULE_cond = 26, RULE_equations = 27, RULE_equal = 28, RULE_and = 29, RULE_or = 30, 
		RULE_greater = 31, RULE_smaller = 32, RULE_values = 33, RULE_substr = 34, 
		RULE_mult = 35, RULE_div = 36, RULE_sum = 37, RULE_random = 38, RULE_expression = 39, 
		RULE_factor = 40, RULE_term = 41, RULE_logic = 42, RULE_num = 43;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "sentence", "temporal", "operation", "logical", "println", 
			"define", "put", "add", "continueup", "continuedown", "continueright", 
			"continueleft", "pos", "posx", "posy", "color", "down", "up", "beggining", 
			"fory", "cases", "when", "elses", "repeat", "whiles", "cond", "equations", 
			"equal", "and", "or", "greater", "smaller", "values", "substr", "mult", 
			"div", "sum", "random", "expression", "factor", "term", "logic", "num"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'main'", "'println'", "'//'", "'Def'", "'Put'", "'Add'", "'Mult'", 
			"'Div'", "'Sum'", "'ContinueUp'", "'ContinueDown'", "'ContinueRight'", 
			"'ContinueLeft'", "'Pos'", "'PosX'", "'PosY'", "'UseColor'", "'Down'", 
			"'Up'", "'Beginning'", "'For'", "'Loop'", "'End'", "'to'", "'Case'", 
			"'When'", "'Then'", "'Else'", "'Repeat'", "'Until'", "'While'", "'Whend'", 
			"'Equal'", "'And'", "'Or'", "'Greater'", "'Smaller'", "'Substr'", "'Random'", 
			"'+'", "'-'", "'*'", "'/'", "'>'", "'<'", "'>='", "'<='", "'=='", "'!='", 
			"'='", "'{'", "'}'", "'('", "')'", "'['", "']'", "';'", "','"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "MAIN", "PRINTLN", "COM", "DEF", "PUT", "ADDO", "MULTO", "DIVO", 
			"SUMO", "CUP", "CDOWN", "CRIGHT", "CLEFT", "POS", "POSX", "POSY", "COLOR", 
			"DOWN", "UP", "BEG", "FOR", "LOOP", "END", "TO", "CASE", "WHEN", "THEN", 
			"ELSE", "REPEAT", "UNTIL", "WHILE", "WHEND", "EQUAL", "AND", "OR", "GREATER", 
			"SMALLER", "SUBSTR", "RANDOM", "PLUS", "MINUS", "MULT", "DIV", "GT", 
			"LT", "GEQ", "LEQ", "EQ", "NEQ", "ASSIGN", "BRACKET_OPEN", "BRACKET_CLOSE", 
			"PAR_OPEN", "PAR_CLOSE", "P_OPEN", "P_CLOSE", "SEMICOLON", "COLON", "BOOLEAN", 
			"ID", "NUMBER", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Simple.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


		Map<String, Object> symbolTable = new HashMap<String, Object>();

	public SimpleParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public SentenceContext sentence;
		public TerminalNode MAIN() { return getToken(SimpleParser.MAIN, 0); }
		public TerminalNode PAR_OPEN() { return getToken(SimpleParser.PAR_OPEN, 0); }
		public TerminalNode PAR_CLOSE() { return getToken(SimpleParser.PAR_CLOSE, 0); }
		public TerminalNode BRACKET_OPEN() { return getToken(SimpleParser.BRACKET_OPEN, 0); }
		public TerminalNode BRACKET_CLOSE() { return getToken(SimpleParser.BRACKET_CLOSE, 0); }
		public List<SentenceContext> sentence() {
			return getRuleContexts(SentenceContext.class);
		}
		public SentenceContext sentence(int i) {
			return getRuleContext(SentenceContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleListener ) ((SimpleListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleListener ) ((SimpleListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SimpleVisitor ) return ((SimpleVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(88);
			match(MAIN);
			setState(89);
			match(PAR_OPEN);
			setState(90);
			match(PAR_CLOSE);
			setState(91);
			match(BRACKET_OPEN);

							List<ASTNode> body = new ArrayList<ASTNode>();
						
			setState(98);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << PRINTLN) | (1L << DEF) | (1L << PUT) | (1L << ADDO) | (1L << CUP) | (1L << CDOWN) | (1L << CRIGHT) | (1L << CLEFT) | (1L << POS) | (1L << POSX) | (1L << POSY) | (1L << COLOR) | (1L << DOWN) | (1L << UP) | (1L << BEG))) != 0)) {
				{
				{
				setState(93);
				((ProgramContext)_localctx).sentence = sentence();
				body.add(((ProgramContext)_localctx).sentence.node);
				}
				}
				setState(100);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(101);
			match(BRACKET_CLOSE);
			 
							for(ASTNode n : body) {
								n.execute(symbolTable);
							}
						
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SentenceContext extends ParserRuleContext {
		public ASTNode node;
		public DefineContext define;
		public PutContext put;
		public PrintlnContext println;
		public AddContext add;
		public ContinueupContext continueup;
		public ContinuedownContext continuedown;
		public ContinuerightContext continueright;
		public ContinueleftContext continueleft;
		public PosContext pos;
		public PosxContext posx;
		public PosyContext posy;
		public ColorContext color;
		public DownContext down;
		public UpContext up;
		public BegginingContext beggining;
		public DefineContext define() {
			return getRuleContext(DefineContext.class,0);
		}
		public PutContext put() {
			return getRuleContext(PutContext.class,0);
		}
		public PrintlnContext println() {
			return getRuleContext(PrintlnContext.class,0);
		}
		public AddContext add() {
			return getRuleContext(AddContext.class,0);
		}
		public ContinueupContext continueup() {
			return getRuleContext(ContinueupContext.class,0);
		}
		public ContinuedownContext continuedown() {
			return getRuleContext(ContinuedownContext.class,0);
		}
		public ContinuerightContext continueright() {
			return getRuleContext(ContinuerightContext.class,0);
		}
		public ContinueleftContext continueleft() {
			return getRuleContext(ContinueleftContext.class,0);
		}
		public PosContext pos() {
			return getRuleContext(PosContext.class,0);
		}
		public PosxContext posx() {
			return getRuleContext(PosxContext.class,0);
		}
		public PosyContext posy() {
			return getRuleContext(PosyContext.class,0);
		}
		public ColorContext color() {
			return getRuleContext(ColorContext.class,0);
		}
		public DownContext down() {
			return getRuleContext(DownContext.class,0);
		}
		public UpContext up() {
			return getRuleContext(UpContext.class,0);
		}
		public BegginingContext beggining() {
			return getRuleContext(BegginingContext.class,0);
		}
		public SentenceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sentence; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleListener ) ((SimpleListener)listener).enterSentence(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleListener ) ((SimpleListener)listener).exitSentence(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SimpleVisitor ) return ((SimpleVisitor<? extends T>)visitor).visitSentence(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SentenceContext sentence() throws RecognitionException {
		SentenceContext _localctx = new SentenceContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_sentence);
		try {
			setState(149);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case DEF:
				enterOuterAlt(_localctx, 1);
				{
				setState(104);
				((SentenceContext)_localctx).define = define();
				((SentenceContext)_localctx).node =  ((SentenceContext)_localctx).define.node;
				}
				break;
			case PUT:
				enterOuterAlt(_localctx, 2);
				{
				setState(107);
				((SentenceContext)_localctx).put = put();
				((SentenceContext)_localctx).node =  ((SentenceContext)_localctx).put.node;
				}
				break;
			case PRINTLN:
				enterOuterAlt(_localctx, 3);
				{
				setState(110);
				((SentenceContext)_localctx).println = println();
				((SentenceContext)_localctx).node =  ((SentenceContext)_localctx).println.node;
				}
				break;
			case ADDO:
				enterOuterAlt(_localctx, 4);
				{
				setState(113);
				((SentenceContext)_localctx).add = add();
				((SentenceContext)_localctx).node =  ((SentenceContext)_localctx).add.node;
				}
				break;
			case CUP:
				enterOuterAlt(_localctx, 5);
				{
				setState(116);
				((SentenceContext)_localctx).continueup = continueup();
				((SentenceContext)_localctx).node =  ((SentenceContext)_localctx).continueup.node;
				}
				break;
			case CDOWN:
				enterOuterAlt(_localctx, 6);
				{
				setState(119);
				((SentenceContext)_localctx).continuedown = continuedown();
				((SentenceContext)_localctx).node =  ((SentenceContext)_localctx).continuedown.node;
				}
				break;
			case CRIGHT:
				enterOuterAlt(_localctx, 7);
				{
				setState(122);
				((SentenceContext)_localctx).continueright = continueright();
				((SentenceContext)_localctx).node =  ((SentenceContext)_localctx).continueright.node;
				}
				break;
			case CLEFT:
				enterOuterAlt(_localctx, 8);
				{
				setState(125);
				((SentenceContext)_localctx).continueleft = continueleft();
				((SentenceContext)_localctx).node =  ((SentenceContext)_localctx).continueleft.node;
				}
				break;
			case POS:
				enterOuterAlt(_localctx, 9);
				{
				setState(128);
				((SentenceContext)_localctx).pos = pos();
				((SentenceContext)_localctx).node =  ((SentenceContext)_localctx).pos.node;
				}
				break;
			case POSX:
				enterOuterAlt(_localctx, 10);
				{
				setState(131);
				((SentenceContext)_localctx).posx = posx();
				((SentenceContext)_localctx).node =  ((SentenceContext)_localctx).posx.node;
				}
				break;
			case POSY:
				enterOuterAlt(_localctx, 11);
				{
				setState(134);
				((SentenceContext)_localctx).posy = posy();
				((SentenceContext)_localctx).node =  ((SentenceContext)_localctx).posy.node;
				}
				break;
			case COLOR:
				enterOuterAlt(_localctx, 12);
				{
				setState(137);
				((SentenceContext)_localctx).color = color();
				((SentenceContext)_localctx).node =  ((SentenceContext)_localctx).color.node;
				}
				break;
			case DOWN:
				enterOuterAlt(_localctx, 13);
				{
				setState(140);
				((SentenceContext)_localctx).down = down();
				((SentenceContext)_localctx).node =  ((SentenceContext)_localctx).down.node;
				}
				break;
			case UP:
				enterOuterAlt(_localctx, 14);
				{
				setState(143);
				((SentenceContext)_localctx).up = up();
				((SentenceContext)_localctx).node =  ((SentenceContext)_localctx).up.node;
				}
				break;
			case BEG:
				enterOuterAlt(_localctx, 15);
				{
				setState(146);
				((SentenceContext)_localctx).beggining = beggining();
				((SentenceContext)_localctx).node =  ((SentenceContext)_localctx).beggining.node;
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TemporalContext extends ParserRuleContext {
		public ForyContext fory() {
			return getRuleContext(ForyContext.class,0);
		}
		public CasesContext cases() {
			return getRuleContext(CasesContext.class,0);
		}
		public RepeatContext repeat() {
			return getRuleContext(RepeatContext.class,0);
		}
		public WhilesContext whiles() {
			return getRuleContext(WhilesContext.class,0);
		}
		public TemporalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_temporal; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleListener ) ((SimpleListener)listener).enterTemporal(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleListener ) ((SimpleListener)listener).exitTemporal(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SimpleVisitor ) return ((SimpleVisitor<? extends T>)visitor).visitTemporal(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TemporalContext temporal() throws RecognitionException {
		TemporalContext _localctx = new TemporalContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_temporal);
		try {
			setState(155);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case FOR:
				enterOuterAlt(_localctx, 1);
				{
				setState(151);
				fory();
				}
				break;
			case CASE:
				enterOuterAlt(_localctx, 2);
				{
				setState(152);
				cases();
				}
				break;
			case REPEAT:
				enterOuterAlt(_localctx, 3);
				{
				setState(153);
				repeat();
				}
				break;
			case WHILE:
				enterOuterAlt(_localctx, 4);
				{
				setState(154);
				whiles();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OperationContext extends ParserRuleContext {
		public ASTNode node;
		public LogicalContext logical;
		public SubstrContext substr;
		public RandomContext random;
		public MultContext mult;
		public DivContext div;
		public SumContext sum;
		public LogicalContext logical() {
			return getRuleContext(LogicalContext.class,0);
		}
		public SubstrContext substr() {
			return getRuleContext(SubstrContext.class,0);
		}
		public RandomContext random() {
			return getRuleContext(RandomContext.class,0);
		}
		public MultContext mult() {
			return getRuleContext(MultContext.class,0);
		}
		public DivContext div() {
			return getRuleContext(DivContext.class,0);
		}
		public SumContext sum() {
			return getRuleContext(SumContext.class,0);
		}
		public OperationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_operation; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleListener ) ((SimpleListener)listener).enterOperation(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleListener ) ((SimpleListener)listener).exitOperation(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SimpleVisitor ) return ((SimpleVisitor<? extends T>)visitor).visitOperation(this);
			else return visitor.visitChildren(this);
		}
	}

	public final OperationContext operation() throws RecognitionException {
		OperationContext _localctx = new OperationContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_operation);
		try {
			setState(175);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case EQUAL:
			case AND:
			case OR:
			case GREATER:
			case SMALLER:
				enterOuterAlt(_localctx, 1);
				{
				setState(157);
				((OperationContext)_localctx).logical = logical();
				((OperationContext)_localctx).node =  ((OperationContext)_localctx).logical.node;
				}
				break;
			case SUBSTR:
				enterOuterAlt(_localctx, 2);
				{
				setState(160);
				((OperationContext)_localctx).substr = substr();
				((OperationContext)_localctx).node =  ((OperationContext)_localctx).substr.node;
				}
				break;
			case RANDOM:
				enterOuterAlt(_localctx, 3);
				{
				setState(163);
				((OperationContext)_localctx).random = random();
				((OperationContext)_localctx).node =  ((OperationContext)_localctx).random.node;
				}
				break;
			case MULTO:
				enterOuterAlt(_localctx, 4);
				{
				setState(166);
				((OperationContext)_localctx).mult = mult();
				((OperationContext)_localctx).node =  ((OperationContext)_localctx).mult.node;
				}
				break;
			case DIVO:
				enterOuterAlt(_localctx, 5);
				{
				setState(169);
				((OperationContext)_localctx).div = div();
				((OperationContext)_localctx).node =  ((OperationContext)_localctx).div.node;
				}
				break;
			case SUMO:
				enterOuterAlt(_localctx, 6);
				{
				setState(172);
				((OperationContext)_localctx).sum = sum();
				((OperationContext)_localctx).node =  ((OperationContext)_localctx).sum.node;
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LogicalContext extends ParserRuleContext {
		public ASTNode node;
		public EqualContext equal;
		public AndContext and;
		public OrContext or;
		public GreaterContext greater;
		public SmallerContext smaller;
		public EqualContext equal() {
			return getRuleContext(EqualContext.class,0);
		}
		public AndContext and() {
			return getRuleContext(AndContext.class,0);
		}
		public OrContext or() {
			return getRuleContext(OrContext.class,0);
		}
		public GreaterContext greater() {
			return getRuleContext(GreaterContext.class,0);
		}
		public SmallerContext smaller() {
			return getRuleContext(SmallerContext.class,0);
		}
		public LogicalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_logical; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleListener ) ((SimpleListener)listener).enterLogical(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleListener ) ((SimpleListener)listener).exitLogical(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SimpleVisitor ) return ((SimpleVisitor<? extends T>)visitor).visitLogical(this);
			else return visitor.visitChildren(this);
		}
	}
